fixed z-index

--- a/css/NewCatalog.styl
+++ b/css/NewCatalog.styl
@@ -63,7 +63,6 @@
 	width 100%
 	position absolute
 	left 0%
-	z-index 100001
 
 #newCatalogRoot #catalogDiv
 	height 90%
@@ -292,7 +291,7 @@
 	position absolute
 	wh 100%
 	pointer-events none
-	z-index 50000
+	z-index 500000
 
 #newCatalogRoot .previewTile
 	background-color rgba(0,0,0,0.9)
@@ -350,7 +349,7 @@
 	background-color rgba(0,0,0,0.9)
 	top 5%
 	height 100%
-	z-index 100000
+	z-index 200000
 	display none
 	border-radius 2%
 
